2007-11-27	Glenn Humphrey <glenn.humphrey@OARcorp.com>

	* posix/src/prwlocktimedrdlock.c, posix/src/prwlocktimedwrlock.c,
	rtems/include/rtems/rtems/barrier.h,
	score/src/corerwlockobtainread.c, score/src/corerwlockobtainwrite.c,
	score/src/corerwlockrelease.c: Fixed several implementation errors.

2007-11-27	Glenn Humphrey <glenn.humphrey@OARcorp.com>

	* rtems/src/regioncreate.c, rtems/src/regiondelete.c,
	rtems/src/regionextend.c, rtems/src/regiongetfreeinfo.c,
	rtems/src/regiongetinfo.c, rtems/src/regiongetsegment.c,
	rtems/src/regiongetsegmentsize.c, rtems/src/regionresizesegment.c,
	rtems/src/regionreturnsegment.c: Restructed to move the OBJECTS_LOCAL
	case to the top of the switch statement, have a single exit with one
	call to _RTEMS_Unlock_allocator and eliminate the fall-through return
	of RTEMS_INTERNAL_ERROR.  These changes produced simplier assembly
	code and allowed for complete test coverage.

2007-11-27	Joel Sherrill <joel.sherrill@oarcorp.com>

	* sapi/include/confdefs.h,
	score/cpu/powerpc/rtems/old-exceptions/cpu.h: Add
	CONFIGURE_APPLICATION_EXTRA_DRIVERS.

2007-11-27	Joel Sherrill <joel.sherrill@oarcorp.com>

	* sapi/include/confdefs.h: Add CONFIGURE_APPLICATION_EXTRA_DRIVERS.

2007-11-27	Joel Sherrill <joel.sherrill@OARcorp.com>

	* libnetworking/netinet/in_cksum.c: ARM optimized version does not
	support Thumb.

2007-11-26	Joel Sherrill <joel.sherrill@oarcorp.com>

	* telnetd/pty.c, telnetd/telnetd.c, telnetd/telnetd.h: Style clean up.
	Now works on gen5200/icecube.

2007-11-26	Joel Sherrill <joel.sherrill@oarcorp.com>

	* libcsupport/src/printk.c, score/src/objectget.c: Fix spacing.

2007-11-26	Joel Sherrill <joel.sherrill@oarcorp.com>

	* libcsupport/src/malloc.c: Do not assert on free of bad pointer.

2007-11-26	Joel Sherrill <joel.sherrill@OARcorp.com>

	* score/include/rtems/score/thread.h: Fix spelling error.

2007-11-17	Till Straumann <strauman@slac.stanford.edu>

	* libi2c/libi2c.c, libi2c/libi2c.h, libi2c/README_libi2c: